RESOLVED FIXED76251
CFURLRef to KURL conversion shouldn't turn raw paths into file URLs
https://bugs.webkit.org/show_bug.cgi?id=76251
Summary CFURLRef to KURL conversion shouldn't turn raw paths into file URLs
Alexey Proskuryakov
Reported 2012-01-13 00:10:10 PST
Forgot about CF in bug 76234.
Attachments
proposed fix (1.54 KB, patch)
2012-01-13 00:11 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2012-01-13 00:11:34 PST
Created attachment 122383 [details] proposed fix
WebKit Review Bot
Comment 2 2012-01-13 09:58:28 PST
Comment on attachment 122383 [details] proposed fix Clearing flags on attachment: 122383 Committed r104947: <http://trac.webkit.org/changeset/104947>
WebKit Review Bot
Comment 3 2012-01-13 09:58:37 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.