CFURLRef to KURL conversion shouldn't turn raw paths into file URLs https://bugs.webkit.org/show_bug.cgi?id=76251

Reviewed by Dan Bernstein.

* platform/cf/KURLCFNet.cpp: (WebCore::KURL::KURL): Removed the offending code.


Canonical link: https://commits.webkit.org/93098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104947 268f45cc-cd09-0410-ab3c-d52691b4dbfc